--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <section id='header'>
-    <a href="#"><img src="images/logo.png" class="logo" alt=""></a>
+    <a href="#"><img src="https://github.com/amritp00udel/amritp00udel/blob/main/logo.png" class="logo" alt=""></a>
 
     <div>
         <ul id="navbar">
